--- a/1stWeekAssessment/Assesment.html
+++ b/1stWeekAssessment/Assesment.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-         <center><h1 id="title">Varsha Swamy Form</h1></center>
+         <center><h1 id="title">Register Form</h1></center>
         <center><p id="discription">thank you for taking the time to help us improve the platform</p></center>
     <form action="https://www.google.com" method="POST" id="survey-form">
         <fieldset> <label for="name">Name</label>
